src/objects/BPyP0023_CPC__c.object
<CustomObject>
    <description>Objeto creado para la Banca Patrimonial y Privada con campos para el conocimiento general del cliente.</description>
    <fields>
        <fullName>BPyP_fm_AvanceCPC__c</fullName>
        <formula>IF(  OR( ISBLANK( BPyP0023_lm_Hobbie__c ) ,   INCLUDES(BPyP0023_lm_Hobbie__c, &apos;Ninguno&apos;) ) , 0, 0.083)+
IF( ISBLANK(TEXT(  BPyP0023_ls_GustaArte__c  )) , 0, 0.083)+
IF(  OR( ISBLANK( BPyP0023_lm_ComidaFavorita__c ) ,   INCLUDES(BPyP0023_lm_ComidaFavorita__c, &apos;Ninguno&apos;) ) , 0, 0.083)+
IF( ISBLANK(TEXT( MX_BPP_Deporte__c )) , 0, 0.083)+
IF(  OR( ISBLANK( BPyP0023_lm_DeporteQueSigue__c ) ,   INCLUDES(BPyP0023_lm_DeporteQueSigue__c, &apos;Ninguno&apos;) ) , 0, 0.083)+
IF(  OR( ISBLANK( MX_BPP_ViajeFrecuente__c) ,   INCLUDES(MX_BPP_ViajeFrecuente__c, &apos;Ninguno&apos;) ) , 0, 0.083)+
IF( ISBLANK( BPyP0023_ls_EventosBBVA__c ) , 0, 0.083)+
IF( ISBLANK( BPyP0023_tx_UniveridadAsistio__c ) , 0, 0.083)+
IF( ISBLANK(TEXT( BPyP0023_tx_LugarComunicacion__c )) , 0, 0.083)+
IF( ISBLANK(TEXT( BPyP0023_ls_EnvioInformacion__c )) , 0, 0.083)+
IF( ISBLANK(TEXT( MX_BPP_Tiene_hijos__c )) , 0, 0.083)+
IF( ISBLANK(TEXT( BPyP0023_ls_CuantosHijosTiene__c )) , 0, 0.083)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avance CPC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BPyP0023_lm_BebidaFavAlcoholica__c</fullName>
        <description>Campo para seleccionar bebida alcohólica favorita del cliente</description>
        <label>¿Cuál es su bebida  alcohólica favorita?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cerveza artesanal</fullName>
                </value>
                <value>
                    <fullName>Cerveza comercial</fullName>
                </value>
                <value>
                    <fullName>Champagne</fullName>
                </value>
                <value>
                    <fullName>Coñac</fullName>
                </value>
                <value>
                    <fullName>Ginebra</fullName>
                </value>
                <value>
                    <fullName>Mezcal</fullName>
                </value>
                <value>
                    <fullName>Pulque</fullName>
                </value>
                <value>
                    <fullName>Ron</fullName>
                </value>
                <value>
                    <fullName>Sake</fullName>
                </value>
                <value>
                    <fullName>Tepache</fullName>
                </value>
                <value>
                    <fullName>Tequila</fullName>
                </value>
                <value>
                    <fullName>Vino</fullName>
                </value>
                <value>
                    <fullName>Vodka</fullName>
                </value>
                <value>
                    <fullName>Whisky</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>Ninguno</fullName>
                </value>
                <value>
                    <fullName>Champán</fullName>
                    <isActive>false</isActive>
                    <label>Champán</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
     <fields>
        <fullName>BPyP0023_lm_BebidaFavNoAlcoholica__c</fullName>
        <description>Campo para seleccionar la bebida favorita no alcohólica del cliente</description>
        <label>¿Bebida favorita No alcoholica?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agua</fullName>
                </value>
                <value>
                    <fullName>Café</fullName>
                </value>
                <value>
                    <fullName>Jugo</fullName>
                </value>
                <value>
                    <fullName>Leche</fullName>
                </value>
                <value>
                    <fullName>Refrescos</fullName>
                </value>
                <value>
                    <fullName>Té</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>Ninguno</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
     <fields>
        <fullName>BPyP0023_lm_ComidaFavorita__c</fullName>
        <description>Campo para seleccionar la comida favorita del cliente</description>
        <label>¿Cuál es su comida favorita?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Americana</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Española</fullName>
                </value>
                <value>
                    <fullName>Francesa</fullName>
                </value>
                <value>
                    <fullName>Italiana</fullName>
                </value>
                <value>
                    <fullName>Japonesa</fullName>
                </value>
                <value>
                    <fullName>Mexicana</fullName>
                </value>
                <value>
                    <fullName>Suiza</fullName>
                </value>
                <value>
                    <fullName>Todo</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>Ninguno</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP0023_lm_DeportePractica__c</fullName>
        <description>Campo para seleccionar deporte que practica el cliente</description>
        <label>¿Qué deporte practica?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Baloncesto</fullName>
                </value>
                <value>
                    <fullName>Béisbol</fullName>
                </value>
                <value>
                    <fullName>Ciclismo</fullName>
                </value>
                <value>
                    <fullName>Fitness</fullName>
                </value>
                <value>
                    <fullName>Fútbol</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Natacion</fullName>
                    <label>Natación</label>
                </value>
                <value>
                    <fullName>Pádel</fullName>
                </value>
                <value>
                    <fullName>Polo</fullName>
                </value>
                <value>
                    <fullName>Tenis</fullName>
                </value>
                <value>
                    <fullName>Voleibol</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>Ninguno</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP0023_lm_DeporteQueSigue__c</fullName>
        <description>Campo para seleccionar deporte que sigue el cliente</description>
        <label>¿Qué deporte sigue?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Baloncesto</fullName>
                </value>
                <value>
                    <fullName>Béisbol</fullName>
                </value>
                <value>
                    <fullName>Fútbol americano</fullName>
                </value>
                <value>
                    <fullName>Fútbol internacional</fullName>
                </value>
                <value>
                    <fullName>Fútbol nacional</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Rugby</fullName>
                </value>
                <value>
                    <fullName>Tenis</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>Ninguno</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP0023_lm_Hobbie__c</fullName>
        <description>Campo para seleccionar algun Hobbie del cliente</description>
        <label>¿Cuáles son sus principales hobbies?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arte</fullName>
                </value>
                <value>
                    <fullName>Automóviles</fullName>
                </value>
                <value>
                    <fullName>Filantropia</fullName>
                </value>
                <value>
                    <fullName>Finanzas e inversión</fullName>
                </value>
                <value>
                    <fullName>Gastronomía</fullName>
                </value>
                <value>
                    <fullName>Moda y estilo</fullName>
                </value>
                <value>
                    <fullName>Relojes</fullName>
                </value>
                <value>
                    <fullName>Salud y ejercicios</fullName>
                </value>
                <value>
                    <fullName>Viajar</fullName>
                </value>
                <value>
                    <fullName>Vinos y licores</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>Ninguno</fullName>
                </value>
                <value>
                    <fullName>Caza</fullName>
                    <isActive>false</isActive>
                    <label>Caza</label>
                </value>
                <value>
                    <fullName>Navegar</fullName>
                    <isActive>false</isActive>
                    <label>Navegar</label>
                </value>
                <value>
                    <fullName>Pesca</fullName>
                    <isActive>false</isActive>
                    <label>Pesca</label>
                </value>
                <value>
                    <fullName>Política</fullName>
                    <isActive>false</isActive>
                    <label>Política</label>
                </value>
                <value>
                    <fullName>Tabaco de calidad</fullName>
                    <isActive>false</isActive>
                    <label>Tabaco de calidad</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP0023_lm_MusicaFavorita__c</fullName>
        <description>Campo para seleccionar musica favorita del cliente</description>
        <label>¿Qué genero de música prefiere?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blues</fullName>
                </value>
                <value>
                    <fullName>Clasica</fullName>
                </value>
                <value>
                    <fullName>Dance</fullName>
                </value>
                <value>
                    <fullName>Flamenco</fullName>
                </value>
                <value>
                    <fullName>Jazz</fullName>
                </value>
                <value>
                    <fullName>Opera</fullName>
                </value>
                <value>
                    <fullName>Ranchera</fullName>
                </value>
                <value>
                    <fullName>Reggae</fullName>
                </value>
                <value>
                    <fullName>Ritmos Latinos</fullName>
                </value>
                <value>
                    <fullName>Rock</fullName>
                </value>
                <value>
                    <fullName>Tango</fullName>
                </value>
                <value>
                    <fullName>Todos</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>Ninguno</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP0023_ls_AlergiaAlimento__c</fullName>
        <description>Campo para saber si el cliente es alérgico a algún alimento</description>
        <label>¿Es alérgico a algún alimento?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP0023_ls_ClubSocial__c</fullName>
        <description>Campo para saber si pertenece a un club social</description>
        <label>¿Pertenece a algún club social?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP0023_ls_CoberturaBBVA__c</fullName>
        <description>Campo para saber si el cliente esta interesado en la cobertura Internacional BBVA</description>
        <inlineHelpText>Cobertura Internacional BBVA</inlineHelpText>
        <label>¿Le interesa cobertura Intl. BBVA?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP0023_ls_CuantosHijosTiene__c</fullName>
        <description>Campo para saber cuantos hijos tiene el cliente</description>
        <label>¿Cuántos hijos tiene?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5 o más</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                    <isActive>false</isActive>
                    <label>0</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP0023_ls_EnfermedadesGravesFamiliar__c</fullName>
        <description>Campo para saber si el cliente tiene familiares con alguna enfermedad grave dentro del núcleo familiar</description>
        <inlineHelpText>Enfermedades graves dentro del núcleo familiar</inlineHelpText>
        <label>¿Existen enfermedades graves?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP0023_ls_EnvioInformacion__c</fullName>
        <description>Campo para saber la preferencía</description>
        <label>¿Cómo prefiere se comuniquen con usted?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Celular</fullName>
                </value>
                <value>
                    <fullName>Correspondencia a oficina</fullName>
                </value>
                <value>
                    <fullName>Por E-mail</fullName>
                </value>
                <value>
                    <fullName>TelefonoFijo</fullName>
                    <label>Teléfono Fijo</label>
                </value>
                <value>
                    <fullName>Correspondencia a domicilio</fullName>
                    <isActive>false</isActive>
                    <label>Correspondencia a domicilio</label>
                </value>
                <value>
                    <fullName>Sucursal BBVA</fullName>
                    <isActive>false</isActive>
                    <label>Sucursal BBVA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP0023_ls_EventosBBVA__c</fullName>
        <description>Campo para saber si esta interesado en algún evento de BBVA</description>
        <label>¿interesado en eventos BBVA?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eventos Market Outlook</fullName>
                </value>
                <value>
                    <fullName>Perspectivas por sector</fullName>
                </value>
                <value>
                    <fullName>Optimización fiscal</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                    <isActive>false</isActive>
                    <label>NO</label>
                </value>
                <value>
                    <fullName>SI</fullName>
                    <isActive>false</isActive>
                    <label>SI</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP0023_ls_GustaArte__c</fullName>
        <description>Campo para saber el gusto del Arte de cliente</description>
        <label>¿Le gusta el arte?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP0023_ls_InteresaEscultura__c</fullName>
        <description>Campo para saber si tiene gusto por la Escultura el cliente</description>
        <label>¿Le interesa la escultura?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP0023_ls_ParticipaAlgunaBeneficencia__c</fullName>
        <description>Campo para saber si el cliente participa en alguna beneficencia</description>
        <label>¿Participa en alguna beneficencia?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP0023_ls_ParticiparFundacionBBVA__c</fullName>
        <description>Campo para seleccionar interés del cliente en la fundación Bancomer</description>
        <label>¿Participaría en la fundación Bancomer?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
     <fields>
        <fullName>BPyP0023_ls_PertenceAsociacion__c</fullName>
        <label>¿Pertenece a alguna asociación?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP0023_ls_ServicioMedicoPremium__c</fullName>
        <description>Campo para saber si el cliente esta interesado en el servicio médico Premium BBVA</description>
        <label>¿Servicio médico Premium BBVA?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP0023_rb_Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo para relacionar el objeto Conocimiento Profundo del Cliente con el Cliente</description>
        <label>Conocimiento Profundo del Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Conocimiento Profundo del Cliente</relationshipLabel>
        <relationshipName>ConocimientoProf</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BPyP0023_tx_CantanteFavorito__c</fullName>
        <description>Campo de texto libre para ingresar cantante preferido del cliente</description>
        <encryptionScheme>None</encryptionScheme>
        <label>¿Quién es su cantante favorito?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
     <fields>
        <fullName>BPyP0023_tx_EscultorFavorito__c</fullName>
        <description>Campo de texto libre para capturar escultor favorito del cliente</description>
        <encryptionScheme>None</encryptionScheme>
        <label>¿Quien es su escultor favorito?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPyP0023_tx_LugarComunicacion__c</fullName>
        <description>Campo de texto libre para capturar el lugar donde le gustaria reunirse el cliente</description>
        <label>¿Dónde prefiere que lo visiten?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oficina</fullName>
                </value>
                <value>
                    <fullName>Restaurante</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
     <fields>
        <fullName>BPyP0023_tx_PintorFavorito__c</fullName>
        <description>Campo de texto libre para capturar el pintor favorito del cliente</description>
        <encryptionScheme>None</encryptionScheme>
        <label>¿Quién es su pintor favorito?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPyP0023_tx_UniveridadAsistio__c</fullName>
        <description>Campo de texto libre para capturar educación del cliente</description>
        <encryptionScheme>None</encryptionScheme>
        <label>¿En que universidad estudió?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_BPP_Alergias__c</fullName>
        <description>alimentos alergicos</description>
        <label>¿A qué alimento es alérgico?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cereales</fullName>
                </value>
                <value>
                    <fullName>Cítricos</fullName>
                </value>
                <value>
                    <fullName>Frutos Secos (nueces, almendras, avellanas)</fullName>
                </value>
                <value>
                    <fullName>Frutos rojos</fullName>
                </value>
                <value>
                    <fullName>Huevo</fullName>
                </value>
                <value>
                    <fullName>Lácteos</fullName>
                </value>
                <value>
                    <fullName>Pescados y Mariscos</fullName>
                </value>
                <value>
                    <fullName>Tomate</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>Ninguno</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_BPP_Bebidafavorita__c</fullName>
        <description>Nuevo campo para Otra bebida alcohólica</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Otra bebida alcohólica favorita</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_BPP_Beneficencia__c</fullName>
        <description>Nuevo campo para especificar el dato de Beneficencia</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre de la beneficencia</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_BPP_Deporte__c</fullName>
        <description>Nuevo campo para deporte</description>
        <label>¿Practica algún deporte?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_BPP_Eventos__c</fullName>
        <description>Nuevo campo para  Programa Succession Planning</description>
        <inlineHelpText>Programa Succession Planning</inlineHelpText>
        <label>¿Le interesa Programa Succession?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_BPP_GeneroMusical__c</fullName>
        <description>Nuevo campo de género musical</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Otro género musical</label>
        <length>30</length>
        <type>Text</type>
    </fields>
     <fields>
        <fullName>MX_BPP_MayoresEdad__c</fullName>
        <inlineHelpText>Referente a los hijos</inlineHelpText>
        <label>¿Cuántos son mayores de edad?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5 o más</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_BPP_OtraAsociacion__c</fullName>
        <description>Nuevo campo para especificar otra asociación</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre de la asociación</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_BPP_OtraComida__c</fullName>
        <description>Nuevo campo para otra comida</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Otra comida favorita</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_BPP_Otro_deporte__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Otro deporte que practique</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_BPP_OtroAlimento__c</fullName>
        <description>Nuevo campo para otro alimento</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Otro alimento</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_BPP_OtroClubSocial__c</fullName>
        <description>Nuevo campo para otro club social</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre del club social</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_BPP_OtroDepSigue__c</fullName>
        <description>Especificar otro deporte que sigue el cliente.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Otro deporte que sigue</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_BPP_OtroLugarVisita__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Otro lugar de visita</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_BPP_Otros_comentarios__c</fullName>
        <description>Este campo recibe comentarios extra en caso de ser necesario</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Otros comentarios</label>
        <type>TextArea</type>
    </fields>
     <fields>
        <fullName>MX_BPP_OtrosHobbies__c</fullName>
        <description>Nuevo campo para Hobbies.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Otro hobbie</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_BPP_Tiene_hijos__c</fullName>
        <description>Nuevo campo para hijos</description>
        <label>¿Tiene hijos?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_BPP_Training__c</fullName>
        <description>Nuevo campo para Training BBVA para próximas generaciones</description>
        <inlineHelpText>Training BBVA para próximas generaciones</inlineHelpText>
        <label>¿Le interesa Training BBVA?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_BPP_ViajeFrecuente__c</fullName>
        <description>Nuevo campo para identificar los viajes frecuentes del cliente</description>
        <label>¿A donde viaja frecuentemente?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Madrid</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Suiza</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Otro_destino__c</fullName>
        <description>Nuevo campo para identificar otros destinos</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Otro destino</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>